--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <div class="container">
     <h1>Welcome to my Page!</h1>
-    <p>Currently under construction, but check back soon for updates on my projects!</p>
+
+    <div class="bottom">
+        <p>Currently under construction, but check back soon for updates on my projects!</p>
+    </div>
 
 </div>
 
