--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 
 <div class="container">
     <h1>Welcome to my Page!</h1>
-    <img src="headshot.png" alt="A picture of myself">
-    <div class="bottom">
-        <p>Currently under construction, but check back soon for updates on my projects!</p>
+    <div class="image-cropper">
+        <img src="headshot.png" alt="A picture of myself" class="rounded" />
     </div>
-
+    <p>Currently under construction, but check back soon for updates on my projects!</p>
 </div>
 
 </body>
