--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 <div class="container">
     <h1>Welcome to my Page!</h1>
-    <div class="image-cropper">
-        <img src="headshot.png" alt="A picture of myself" class="rounded" />
-    </div>
+    <img src="headshot.png" alt="A picture of myself" class="rounded">
     <p>Currently under construction, but check back soon for updates on my projects!</p>
 </div>
 
