--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <h1>Welcome to my Page!</h1>
-    <img src="headshot.png" alt="A picture of myself" class="rounded">
+    <img src="images/headshot.png" alt="A picture of myself" class="rounded">
     <p>Currently under construction, but check back soon for updates on my projects!</p>
 </div>
 
