--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 
+<div class="sidenav">
+    <a href="#">About</a>
+    <a href="#">Resume</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
+</div>
+
 <div class="container">
     <h1>Welcome to my Page!</h1>
     <img src="images/headshot.png" alt="A picture of myself" class="rounded">
