--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="sidenav">
     <a href="#">About</a>
-    <a href="#">Resume</a>
+    <a href="#">Résumé</a>
     <a href="#">Projects</a>
     <a href="#">Contact</a>
 </div>
