--- a/home.html
+++ b/home.html
@@ -8,10 +8,10 @@
 <body>
 
 <div class="sidenav">
-    <a href="#">About</a>
-    <a href="#">Résumé</a>
-    <a href="#">Projects</a>
-    <a href="#">Contact</a>
+    <a href="home.html">Home</a>
+    <a href="pages/resume.html">Résumé</a>
+    <a href="pages/projects.html">Projects</a>
+    <a href="pages/contact.html">Contact</a>
 </div>
 
 <div class="container">
