--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="sidenav">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="pages/resume.html">Résumé</a>
     <a href="pages/projects.html">Projects</a>
     <a href="pages/contact.html">Contact</a>
