--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="sidenav">
-    <a href="../home.html">Home</a>
+    <a href="../index.html">Home</a>
     <a href="resume.html">Résumé</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
