--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Aidan Sprague | Home</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <script src=""></script>
 </head>
 <body>
 
@@ -12,6 +13,9 @@
     <a href="pages/resume.html">Résumé</a>
     <a href="pages/projects.html">Projects</a>
     <a href="pages/contact.html">Contact</a>
+    <div class="bottom">
+        <p>Copyright © 2021</p>
+    </div>
 </div>
 
 <div class="container">
