--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,6 +12,9 @@
     <a href="resume.html">Résumé</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
+    <div class="bottom">
+        <p>Copyright © 2021</p>
+    </div>
 </div>
 
 <div class="container">
