--- a/index.html
+++ b/index.html
@@ -3,25 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Aidan Sprague | Home</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
     <script src=""></script>
 </head>
 <body>
 
-<div class="sidenav">
-    <a href="index.html">Home</a>
-    <a href="pages/resume.html">Résumé</a>
-    <a href="pages/projects.html">Projects</a>
-    <a href="pages/contact.html">Contact</a>
-    <div class="bottom">
-        <p>Copyright © 2021</p>
+<div class="topbuffer"></div>
+<div class="bottombuffer">
+    <a>Copyright © 2021 Aidan Sprague.</a>
+</div>
+
+<div class="row">
+    <div class="column">
+        <img src="images/headshot.png" alt="A picture of myself" class="rounded">
+    </div>
+    <div class="column">
+        <div class="navbar">
+            <a class="active" href="index.html">Home</a>
+            <a href="pages/resume.html">Résumé</a>
+            <a href="pages/projects.html">Projects</a>
+            <a href="pages/contact.html">Contact</a>
+        </div>
     </div>
 </div>
 
 <div class="container">
-    <h1>Welcome to my Page!</h1>
-    <img src="images/headshot.png" alt="A picture of myself" class="rounded">
-    <p>Currently under construction, but check back soon for updates on my projects!</p>
+    <h1>Hi, My Name is Aidan.</h1>
+    <img src="images/vtlogohorizontal.png" alt="Virginia Tech Logo">
+    <br>
+    <h2>Who Am I?</h2>
+    <p>
+        I'm an aspiring Software Developer, UX Designer, and Entrepreneur from the Northern Virginia
+        area. I'm a second-year Computer Science student at Virginia Tech with a minor in Human-Computer
+        Interaction and a focus in Artificial Intelligence.
+    </p>
 </div>
 
 </body>
