--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Aidan Sprague | Projects</title>
-    <link rel="stylesheet" href="../style.css" type="text/css">
+    <link rel="stylesheet" href="../styles/style.css" type="text/css">
 </head>
 <body>
 
-<div class="sidenav">
-    <a href="../index.html">Home</a>
-    <a href="resume.html">Résumé</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-    <div class="bottom">
-        <p>Copyright © 2021</p>
+<div class="topbuffer"></div>
+<div class="bottombuffer">
+    <a>Copyright © 2021 Aidan Sprague.</a>
+</div>
+
+<div class="row">
+    <div class="column">
+        <img src="../images/headshot.png" alt="A picture of myself" class="rounded">
+    </div>
+    <div class="column">
+        <div class="navbar">
+            <a href="../index.html">Home</a>
+            <a href="resume.html">Résumé</a>
+            <a class="active" href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </div>
 </div>
 
 <div class="container">
     <h1>Projects</h1>
+    <p>Currently under construction, but check back soon for updates on my projects!</p>
 </div>
 
 </body>
