--- a/index.html
+++ b/index.html
@@ -31,12 +31,31 @@
     <h1>Hi, My Name is Aidan.</h1>
     <img src="images/vtlogohorizontal.png" alt="Virginia Tech Logo">
     <br>
+    <br>
     <h2>Who Am I?</h2>
     <p>
         I'm an aspiring Software Developer, UX Designer, and Entrepreneur from the Northern Virginia
         area. I'm a second-year Computer Science student at Virginia Tech with a minor in Human-Computer
         Interaction and a focus in Artificial Intelligence.
     </p>
+    <br>
+    <h2>What Do I Do?</h2>
+
+    <h3>AnaVation, LLC - Intern</h3>
+    <h5>May 2021 - August 2021 (Future)</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloremque eos in nisi tempora. Accusamus aperiam beatae cum delectus, distinctio est perspiciatis placeat. At autem delectus ducimus earum non porro qui recusandae, repellendus sequi totam. Accusamus accusantium earum, eius et fugiat, id modi neque porro quas quos sit, soluta velit!</p>
+
+    <h3>Artificial Intelligence & Machine Learning Club - Treasurer</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci amet architecto, corporis dolorum esse facere facilis, ipsum iusto magni minima nulla placeat quasi quibusdam quo quos, ratione repudiandae. Aliquid aut corporis eius ex incidunt iure nam neque voluptatem. Aliquam amet assumenda corporis cumque dicta doloribus libero numquam porro reprehenderit sed?</p>
+
+    <h3>Design, Build, Fly! at VT - SEC Representative & Outreach Coordinator</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci consectetur et fugit impedit itaque iure labore libero magnam necessitatibus nesciunt officia officiis possimus, quae, quia quod similique soluta sunt. Atque nemo odit quo reprehenderit veritatis. Ab at aut autem consectetur ducimus harum, inventore molestias repellat sed tempore velit voluptatum?</p>
+
+    <h3>VT Computer Science Department - Teaching Assistant</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt, eligendi fugit molestias numquam porro quae suscipit ut veritatis vero? Aut consequuntur culpa cupiditate, ea earum hic impedit iste itaque, labore laboriosam, libero maxime nulla repudiandae vel vitae voluptate voluptates? Doloribus eaque mollitia quia. Atque eius in omnis reprehenderit tempore.</p>
+
+    <h3>Web Development at VT - Member</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aspernatur atque autem dicta dignissimos est ex explicabo impedit incidunt minus placeat porro quas quisquam, quod reiciendis soluta unde. Accusamus accusantium aperiam debitis dolor exercitationem harum iure modi mollitia nemo nostrum odit qui quisquam rerum, sit tempora tempore ullam vitae voluptates!</p>
 </div>
 
 </body>
