--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 </div>
 
 <div class="container">
-    <h1>Hi, My Name is Aidan.</h1>
+    <div class="typewriter">
+        <h1>Hi, My Name is Aidan.</h1>
+    </div>
     <img src="images/vtlogohorizontal.png" alt="Virginia Tech Logo">
     <br>
     <br>
