--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="column">
         <div class="navbar">
             <a class="active" href="index.html">Home</a>
-            <a href="pages/resume.html">Résumé</a>
+            <a href="pages/skills.html">Skills</a>
             <a href="pages/projects.html">Projects</a>
             <a href="pages/contact.html">Contact</a>
         </div>
@@ -38,7 +38,14 @@
     <p>
         I'm an aspiring Software Developer, UX Designer, and Entrepreneur from the Northern Virginia
         area. I'm a second-year Computer Science student at Virginia Tech with a minor in Human-Computer
-        Interaction and a focus in Artificial Intelligence.
+        Interaction and a focus in Artificial Intelligence. I currently hold two club leadership positions,
+        plan to serve as an Undergraduate Teaching Assistant for the Computer Science Department in the
+        upcoming Spring semester, and have a Summer 2021 internship planned with AnaVation, LLC.
+    </p>
+    <p>
+        Software design has been a big passion of mine for years. To me, creating a system, algorithm,
+        or website yourself is almost its own form of art; the satisfaction that comes from seeing something
+        that you made being used and enjoyed by others is second to none.
     </p>
     <br>
     <h2>What Do I Do?</h2>
