--- a/pages/skills.html
+++ b/pages/skills.html
@@ -19,7 +19,7 @@
     <div class="column">
         <div class="navbar">
             <a href="../index.html">Home</a>
-            <a class="active" href="resume.html">Résumé</a>
+            <a class="active" href="skills.html">Skills</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="container">
-    <h1>Résumé</h1>
+    <h1>Skills</h1>
     <p>Currently under construction, but check back soon for updates on my projects!</p>
 </div>
 
