--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
     <div class="column">
         <div class="navbar">
             <a href="../index.html">Home</a>
-            <a href="resume.html">Résumé</a>
+            <a href="skills.html">Skills</a>
             <a href="projects.html">Projects</a>
             <a class="active" href="contact.html">Contact</a>
         </div>
@@ -28,7 +28,14 @@
 
 <div class="container">
     <h1>Contact</h1>
-    <p>Currently under construction, but check back soon for updates on my projects!</p>
+    <ul>
+        <li><b>General Email</b>: azsprague@vt.edu</li>
+        <li><b>Personal Email</b>: aidanzsprague@gmail.com</li>
+        <li><b>Cell</b>: (571) 289-5959</li>
+    </ul>
+    <br>
+    <h2>Other Sites:</h2>
+    <p><a href="https://github.com/azsprague">GitHub</a></p>
 </div>
 
 </body>
