--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,7 +19,7 @@
     <div class="column">
         <div class="navbar">
             <a href="../index.html">Home</a>
-            <a href="resume.html">Résumé</a>
+            <a href="skills.html">Skills</a>
             <a class="active" href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
         </div>
