--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,9 @@
     </ul>
     <br>
     <h2>Other Sites:</h2>
-    <p><a href="https://github.com/azsprague">GitHub</a></p>
+    <ul>
+        <li><a href="https://github.com/azsprague">GitHub Profile</a></li>
+    </ul>
 </div>
 
 </body>
