--- a/pages/skills.html
+++ b/pages/skills.html
@@ -27,7 +27,9 @@
 </div>
 
 <div class="container">
-    <h1>Skills</h1>
+    <div class="typewriter">
+        <h1>This is What I Can Do:</h1>
+    </div>
     <p>Currently under construction, but check back soon for updates on my projects!</p>
 </div>
 
