--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,7 +27,9 @@
 </div>
 
 <div class="container">
-    <h1>Contact</h1>
+    <div class="typewriter">
+        <h1>How to Contact Me:</h1>
+    </div>
     <ul>
         <li><b>General Email</b>: azsprague@vt.edu</li>
         <li><b>Personal Email</b>: aidanzsprague@gmail.com</li>
