--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,7 +27,9 @@
 </div>
 
 <div class="container">
-    <h1>Projects</h1>
+    <div class="typewriter">
+        <h1>Check Out My Work:</h1>
+    </div>
     <p>Currently under construction, but check back soon for updates on my projects!</p>
 </div>
 
