--- a/pages/skills.html
+++ b/pages/skills.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Aidan Sprague | Résumé</title>
     <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <script src="../scripts/quotes.js" type="text/javascript"> </script>
 </head>
 <body>
 
@@ -31,6 +32,11 @@
         <h1>This is What I Can Do:</h1>
     </div>
     <p>Currently under construction, but check back soon for updates on my projects!</p>
+</div>
+
+<div class="container">
+    <div id="quoteDisplay" style="text-align: center; margin-top: 1em; margin-bottom: 2em"></div>
+    <script>newQuote();</script>
 </div>
 
 </body>
