--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Aidan Sprague | Contact</title>
     <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <script src="../scripts/quotes.js" type="text/javascript"> </script>
 </head>
 <body>
 
@@ -40,6 +41,11 @@
     <ul>
         <li><a href="https://github.com/azsprague">GitHub Profile</a></li>
     </ul>
+</div>
+
+<div class="container">
+    <div id="quoteDisplay" style="text-align: center; margin-top: 1em; margin-bottom: 2em"></div>
+    <script>newQuote();</script>
 </div>
 
 </body>
