--- a/pages/projects.html
+++ b/pages/projects.html
@@ -31,7 +31,39 @@
     <div class="typewriter">
         <h1>Check Out My Work:</h1>
     </div>
-    <p>Currently under construction, but check back soon for updates on my projects!</p>
+</div>
+
+<div class="container">
+    <h3>This Website!</h3>
+    <a href="#" style="color: #555">Repository</a>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam doloremque ipsa libero nam reprehenderit velit? Aliquid autem culpa cum delectus dolores eligendi enim fugit id, incidunt nam nobis nostrum officia provident quae quam quisquam ratione reiciendis repellat, sequi voluptatem. Eligendi ipsum nobis officiis recusandae reiciendis reprehenderit similique suscipit voluptas.
+    </p>
+
+    <h3>Financial Organization System</h3>
+    <a href="#" style="color: #555">Repository</a>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci deleniti expedita illo iure, modi nesciunt nihil odio possimus quam voluptatibus? A alias aliquam aliquid aspernatur autem, consequatur corporis ducimus et harum illo illum incidunt ipsam laboriosam nam neque officia officiis optio praesentium qui repudiandae soluta tenetur totam ut. Accusantium, assumenda.
+    </p>
+
+    <h3>Automated Email System</h3>
+    <a href="#" style="color: #555">Repository</a>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere fugit harum ipsa iusto molestias nam, neque, nesciunt numquam obcaecati officiis quae saepe, ut voluptatibus? Autem dolore inventore necessitatibus rem sint vel? Architecto aspernatur ducimus mollitia nesciunt rerum? Debitis dignissimos doloribus dolorum eius error illum in, officia, quasi sint vel voluptatem.
+    </p>
+
+    <h3>Java BlackJack (With GUI)</h3>
+    <a href="#" style="color: #555">Repository</a>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid hic, magnam modi nemo nostrum pariatur rem repellendus vel? Dolorum eum inventore iusto libero minima nobis officia repudiandae soluta? Dolores hic minus molestiae odit provident quaerat similique totam! Doloremque nobis porro quaerat quas quisquam sequi, suscipit ullam ut! Excepturi, harum itaque.
+    </p>
+
+    <h3>Java Hangman (Text-Based)</h3>
+    <a href="#" style="color: #555">Repository</a>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda blanditiis consectetur consequuntur deserunt, doloremque dolorum est excepturi explicabo facere illum ipsa ipsam ipsum iste laboriosam magni maiores minima modi molestiae nam natus necessitatibus nisi nobis obcaecati provident, quae ullam veniam! Delectus dolore enim et eveniet ipsum magnam maiores qui recusandae!
+    </p>
+
 </div>
 
 <div class="container">
