--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,8 +39,8 @@
     <br>
     <h2>Other Sites:</h2>
     <ul>
-        <li><a href="https://github.com/azsprague" style="color: black">GitHub Profile</a></li>
-        <li><a href="https://www.linkedin.com/in/aidan-sprague-a370711b7/" style="color: black">LinkedIn Profile</a></li>
+        <li><a href="https://github.com/azsprague" target="_blank" rel="noopener noreferrer" style="color: black">GitHub Profile</a></li>
+        <li><a href="https://www.linkedin.com/in/aidan-sprague-a370711b7/" target="_blank" rel="noopener noreferrer" style="color: black">LinkedIn Profile</a></li>
     </ul>
 </div>
 
