--- a/pages/skills.html
+++ b/pages/skills.html
@@ -31,7 +31,59 @@
     <div class="typewriter">
         <h1>This is What I Can Do:</h1>
     </div>
-    <p>Currently under construction, but check back soon for updates on my projects!</p>
+</div>
+
+<div class="container">
+    <h2>Backend:</h2>
+    <h3>Java:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aut, cum, dignissimos doloremque hic impedit
+        magnam magni obcaecati odio, quo ratione repudiandae rerum similique temporibus.
+    </p>
+    <h3>C:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, consequatur debitis doloremque, dolores
+        facere, iusto libero magnam mollitia nobis nulla quas sit suscipit vero! Voluptatem.
+    </p>
+    <h3>C#:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolores dolorum ducimus eaque est itaque,
+        iure magni, maiores, nostrum odit perspiciatis qui quidem temporibus voluptatibus!
+    </p>
+
+    <h2>Frontend:</h2>
+    <h3>HTML:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad blanditiis consequuntur eligendi explicabo
+        laboriosam laborum mollitia recusandae rem sint voluptatibus. Corporis nemo optio quod voluptates.
+    </p>
+    <h3>CSS:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci error libero praesentium. Aperiam deleniti
+        ea, eius eum facere ipsam iste itaque magni minima repellat voluptatum.
+    </p>
+    <h3>JavaScript:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid beatae culpa dolore harum ipsa magni, minima
+        neque quo, ratione, reiciendis repellendus tempore ut velit vero.
+    </p>
+
+    <h2>Other:</h2>
+    <h3>Python:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut debitis dicta dolor error et laborum minima
+        nihil non, numquam odio, omnis quidem repellendus sed, ut!
+    </p>
+    <h3>MATLAB:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at consequuntur cum delectus enim fugiat
+        fugit nam natus nesciunt, obcaecati optio rem sed vel veritatis!
+    </p>
+    <h3>AWS:</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error facere hic, nam nostrum praesentium repellat
+        reprehenderit ullam! At non quaerat quod reiciendis similique suscipit veritatis.
+    </p>
 </div>
 
 <div class="container">
