--- a/pages/skills.html
+++ b/pages/skills.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Aidan Sprague | Résumé</title>
+    <title>Aidan Sprague | Skills</title>
     <link rel="stylesheet" href="../styles/style.css" type="text/css">
     <script src="../scripts/quotes.js" type="text/javascript"> </script>
 </head>
