--- a/index.html
+++ b/index.html
@@ -54,47 +54,93 @@
 
     <h3>AnaVation, LLC - Intern</h3>
     <h5>May 2021 - August 2021 (Future)</h5>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium doloremque eos in nisi tempora.
-        Accusamus aperiam beatae cum delectus, distinctio est perspiciatis placeat. At autem delectus ducimus
-        earum non porro qui recusandae, repellendus sequi totam. Accusamus accusantium earum, eius et fugiat,
-        id modi neque porro quas quos sit, soluta velit!
+    <p style="margin-bottom: 3em;">
+        Following a meeting with the firm's CEO at the Virginia Tech CS|Source Career Fair and a subsequent
+        interview, I have been offered a position as a Summer Intern with AnaVation, LLC
+        (<a href="https://anavationllc.com/" target="_blank" rel="noopener noreferrer">Their Website</a>)! I'm still
+        waiting to hear about the specific projects that I'll be working on, but I should find out soon and will keep
+        this page updated! The program runs from mid-May through early-August.
     </p>
 
     <h3>VT Computer Science Department - Teaching Assistant</h3>
     <h5>January 2021 - May 2021 (Future)</h5>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt, eligendi fugit molestias
-        numquam porro quae suscipit ut veritatis vero? Aut consequuntur culpa cupiditate, ea earum hic impedit
-        iste itaque, labore laboriosam, libero maxime nulla repudiandae vel vitae voluptate voluptates?
-        Doloribus eaque mollitia quia. Atque eius in omnis reprehenderit tempore.
+    <p style="margin-bottom: 3em;">
+        Upon finishing the course CS 2505 (Intro to Computer Organization I) at Virginia Tech, I was sent an
+        offer from the course professor (William McQuain) with an offer to be a Teaching Assistant for the
+        Computer Science Department. I haven't been told which course or section I would be responsible for,
+        but I should be hearing back soon. The position is currently for the Spring Semester, running from
+        late-January through early-May.
     </p>
 
     <h3>Artificial Intelligence & Machine Learning Club - Treasurer</h3>
     <h5>August 2020 - Present</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci amet architecto, corporis dolorum esse
-        facere facilis, ipsum iusto magni minima nulla placeat quasi quibusdam quo quos, ratione repudiandae.
-        Aliquid aut corporis eius ex incidunt iure nam neque voluptatem. Aliquam amet assumenda corporis cumque
-        dicta doloribus libero numquam porro reprehenderit sed?
+        I joined the AI/ML club at the beginning of the Fall 2020 semester as just a member so I could get some
+        better hands-on experience with the field. We went over a bunch of interesting topics including:
     </p>
+    <ul>
+        <li>Traditional Neural Networks</li>
+        <li>Convolutional Neural Networks</li>
+        <li>Image Recognition</li>
+        <li>Natural Language Processing (NLP)</li>
+        <li>Ensemble Learning</li>
+    </ul>
+    <p></p>
+    <p>
+        I also gained experience using software such as Orange to better visualize the whole process. Towards the
+        end of the semester, I applied (and was accepted) to be the club Treasurer; I serve alongside 4 other students,
+        and together we are responsible for creating the club events and projects for each meeting. As the Treasurer,
+        I am personally responsible for:
+    </p>
+    <ul style="margin-bottom: 3em;">
+        <li>Allocating All Club Funding</li>
+        <li>Creating a Club Budget</li>
+        <li>Managing and Dispersing Funds</li>
+        <li>Collaborating with Other Leaders on Club Direction</li>
+    </ul>
 
     <h3>Design, Build, Fly! at VT - SEC Representative & Outreach Coordinator</h3>
     <h5>October 2019 - Present</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci consectetur et fugit impedit itaque
-        iure labore libero magnam necessitatibus nesciunt officia officiis possimus, quae, quia quod similique
-        soluta sunt. Atque nemo odit quo reprehenderit veritatis. Ab at aut autem consectetur ducimus harum,
-        inventore molestias repellat sed tempore velit voluptatum?
+        DBF was the first club I joined at Virginia Tech; each year, we create an unmanned, electric powered,
+        radio-controlled aircraft to be applied to "real world" missions. It's a pretty substantial task which involves
+        months of work and dozens of workers, so members are divided into sub-teams where they focus on specific parts
+        of the process. As a Freshman, I joined the Manufacturing team - we were responsible for creating the physical
+        plane from the CAD models.
     </p>
+    <p>
+        Alongside Manufacturing, I shadowed the club's Student Engineer's Council Representative and Outreach Coordinator
+        (Jack Barnes) to learn more about how the club gets funding and promotes itself. Fast-Forward to the 2020-21
+        school year, and here I am in that exact position! My exact duties entail:
+    </p>
+    <ul style="margin-bottom: 3em;">
+        <li>Representing the Club Among All of the Engineering Clubs</li>
+        <li>Allocating Club Funding from the SEC</li>
+        <li>Organizing and Filing Receipts</li>
+        <li>Communicating with the Project Manager</li>
+        <li>Planning Outreach Events to Promote the Club</li>
+    </ul>
 
     <h3>Web Development at VT - Member</h3>
     <h5>August 2020 - Present</h5>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aspernatur atque autem dicta dignissimos
-        est ex explicabo impedit incidunt minus placeat porro quas quisquam, quod reiciendis soluta unde.
-        Accusamus accusantium aperiam debitis dolor exercitationem harum iure modi mollitia nemo nostrum odit qui
-        quisquam rerum, sit tempora tempore ullam vitae voluptates!
+        I'm not going to lie - prior to this past semester, I knew little to nothing about web design. Understanding
+        this myself, I decided I would join a club that would give me some experience and knowledge on the topic; enter
+        Web Development at VT. The club runs on a semester-to-semester basis, essentially giving a crash course in
+        basic web design and development. Each week, a new topic is taught from ground zero, and just enough is shown
+        that you could figure it out from there. Overall, the topics that were covered in the club (and I somewhat
+        picked up) included:
+    </p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Node.js</li>
+        <li>Version Control with GitHub</li>
+    </ul>
+    <p>
+        Even though I've only been in the club for a few months, it's taught me a decent bit - enough to make this
+        website!
     </p>
 </div>
 
