--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </ul>
     <p>
         Even though I've only been in the club for a few months, it's taught me a decent bit - enough to make this
-        website!
+        website from scratch!
     </p>
 </div>
 
